# anytype-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pip.yml
anypy/: __init__.py  anytype.py  block.py  const.py  object.py  relation.py  space.py  template.py  type.py
anytype/: __init__.py  anytype.py  block.py  config.py  error.py  member.py  object.py  space.py  template.py  type.py
examples/: export.py  hello_world.py  import-pdf-notes.py  requirements.txt  source.py  test.py
tests/: __init__.py  test_space.py
