[project]
name = "anytype-client" 
version = "0.0.1-alpha.12"
description = " A Python Client for Anytype."
readme = "README.md"
authors = [
  {name = "Charles K. Neimog", email = "charlesneimog@outlook.com"},
]
license = {text = "GPL-3.0-or-later"}

[project.urls]
"Source Code" = "https://github.com/charlesneimog/anytype-client" 

[tool.setuptools]
packages = ["anytype"]

[tool.black]
line-length = 80
fast = true


